--- a/customers-management-app/Views/Addresses/CreateAddress.cshtml
+++ b/customers-management-app/Views/Addresses/CreateAddress.cshtml
@@ -1,31 +1,40 @@
 ﻿@model customers_management_app.Models.Addresses
 
+@{
+    ViewData["Title"] = "CreateAddress";
+}
 
-<div class="col-md-4">
-    <form asp-action="CreateAddress">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <div class="form-group">
-            @Html.DropDownList("Neighborhoods", (IEnumerable<SelectListItem>)ViewBag.Neighborhoods, "Select neighborhood")
-        </div>
-        <div class="form-group">
-            <label asp-for="AddrsStreet1" class="control-label"></label>
-            <input asp-for="AddrsStreet1" class="form-control" />
-            <span asp-validation-for="AddrsStreet1" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="AddrsStreet2" class="control-label"></label>
-            <input asp-for="AddrsStreet2" class="form-control" />
-            <span asp-validation-for="AddrsStreet2" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="AddrsCountry" class="control-label"></label>
-            <input asp-for="AddrsCountry" class="form-control" />
-            <span asp-validation-for="AddrsCountry" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <input type="submit" value="Create" class="btn btn-primary" />
-        </div>
-    </form>
+<h1>Create address for the customer</h1>
+
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="CreateAddress">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                @Html.DropDownList("Neighborhoods", (SelectList)ViewBag.Neighborhoods, "Neighborhood", new {@class = "btn bg-light text-start border-secondary w-100"})
+            </div><br/>
+            <div class="form-group">
+                <label asp-for="AddrsStreet1" class="control-label fw-bold">Street 1</label>
+                <input asp-for="AddrsStreet1" class="form-control" />
+                <span asp-validation-for="AddrsStreet1" class="text-danger"></span>
+            </div><br />
+            <div class="form-group">
+                <label asp-for="AddrsStreet2" class="control-label fw-bold">Street 2</label>
+                <input asp-for="AddrsStreet2" class="form-control" />
+            </div><br />
+            <div class="form-group">
+                @Html.DropDownList("Countries", (SelectList)ViewBag.Countries, "Country", new {@class = "btn bg-light text-start border-secondary w-100"})
+            </div><br/>
+            <div class="form-group">
+                <input type="submit" value="Create" asp-action="Create" class="btn btn-success" />
+            </div>
+        </form>
+    </div>
+</div><br/>
+
+<div>
+    <a asp-action="Index" class="btn btn-info">Back to List</a>
 </div>
 
 @section Scripts {
