--- a/customers-management-app/Views/Customers/CreateCustomer.cshtml
+++ b/customers-management-app/Views/Customers/CreateCustomer.cshtml
@@ -1,4 +1,4 @@
-﻿@model customers_management_app.Models.Customers
+﻿@model customers_management_app.Models.ViewModels.CustomersViewModel
 
 @{
     ViewData["Title"] = "CreateCustomer";
